# cv

./: pyproject.toml
cv/cv/: settings.py  urls.py
cv/portfolio/: urls.py  views.py
cv/portfolio/templates/portfolio/: blog-detail.html  home.html  portfolio-detail.html
cv/templates/: base.html
tests/: test_backgroud.py
