[tool.poetry]
name = "backgroud"
version = "0.1.0"
description = ""
authors = ["selver96 <selver.said01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
